--- a/env/dev/kustomization.yaml
+++ b/env/dev/kustomization.yaml
@@ -7,5 +7,5 @@ resources:
 namespace: guestbook-simple-dev
 
 images:
-- name: ghcr.io/akuity/guestbook
+- name: ghcr.io/ocanema/guestbook
   newTag: v0.0.1
