--- a/env/prod/kustomization.yaml
+++ b/env/prod/kustomization.yaml
@@ -7,5 +7,5 @@ resources:
 namespace: guestbook-simple-prod
 
 images:
-- name: ghcr.io/akuity/guestbook
+- name: ghcr.io/ocanema/guestbook
   newTag: v0.0.1
